--- a/Lec04_Array/Lec04_class/Lec04_class.vcxproj
+++ b/Lec04_Array/Lec04_class/Lec04_class.vcxproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <ClInclude Include="Car.h" />
     <ClInclude Include="Complex.h" />
+    <ClInclude Include="SportsCar.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
