--- a/Lec04_Array/Lec04_class/Lec04_class.vcxproj.filters
+++ b/Lec04_Array/Lec04_class/Lec04_class.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Car.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="SportsCar.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
